maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:35: error: value -= is not a member of Int
        c-=1;
         ^JediEscaper:42: error: value -= is not a member of Int
        c-=1;
         ^JediEscaper:49: error: value -= is not a member of Int
        c-=1;
         ^JediEscaper:56: error: value -= is not a member of Int
        c-=1;
         ^